--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -1,2 +1,7 @@
-<!--pages/user/user.wxml-->
-<text>敬请期待</text>
+<!-- 空白高度 -->
+<view style="height:50px;"></view>
+<view style="display: flex;justify-content:center;font-size:20px;">请扫描下方二维码关注公众号：</view>
+<view style="height:20px;"></view>
+<view style="display: flex;justify-content: center;">
+  <image src="/pages/images/haibao/wx_code.jpg" mode="widthFix"></image>
+</view>
