--- a/pages/template/pdf_play.wxml
+++ b/pages/template/pdf_play.wxml
@@ -1,2 +1,4 @@
+<view style="height:100px;"></view>
+<view wx:if="{{!showProcess}}" style="display: flex;justify-content:center;font-size:20px;">文件打开进度：{{progress}}%</view>
 <web-view wx:if="{{ios}}" src="{{pdfUrl}}"></web-view>
 
